# mais

./: .coverage  .gitignore  compose.yaml  pyproject.toml
mais/: app.py  database.py  models.py  schemas.py
mais/routers/: users.py
migrations/: env.py
migrations/versions/: 945c4560b747_create_users_table.py
pgdata/: postmaster.pid
pgdata/base/1/: 2619  pg_internal.init
pgdata/base/16384/: 1247  1249  1259  16389  16392  16394  16401  16406  2224  2579  2604  2606  2608  2610  2619  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2703  2704  3455  5002  pg_internal.init
pgdata/base/4/: 2619
pgdata/base/5/: pg_internal.init
pgdata/global/: 1260  2676  pg_control  pg_internal.init
tests/: conftest.py  test_app.py  test_user.py
